fix: pom.xml